--- a/src/config/log4j.properties
+++ b/src/config/log4j.properties
@@ -3,7 +3,7 @@ log4j.addivity.org.apache=true
 
 # The log will output to console
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-log4j.appender.Threshold=DEBUG
+log4j.appender.Threshold=INFO
 log4j.appender.CONSOLE.Target=System.out
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} [%p] [%c] [%t] (%F\:%L) - %m%n
