--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -22,6 +22,17 @@
 		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
+	<filter>  
+        <filter-name>loginFilter</filter-name>  
+        <filter-class>  
+            com.cst.filter.LoginFilter
+        </filter-class>  
+    </filter>  
+    <filter-mapping>  
+        <filter-name>loginFilter</filter-name>  
+        <url-pattern>/admin/*</url-pattern>  
+    </filter-mapping>  
+	
 	<!-- 控制静态页面  开静态资源 -->
 	<!-- <servlet-mapping>
 	    <servlet-name>default</servlet-name>
