hibernate操作方法封装

--- a/src/config/log4j.properties
+++ b/src/config/log4j.properties
@@ -10,7 +10,7 @@ log4j.appender.Console.layout.ConversionPattern=%d{yyyy-MM-dd HH\:mm\:ss} [%p] [
 
 # The log will output to log files, and the log files will auto rolling
 log4j.appender.ROLLING_FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.ROLLING_FILE.Threshold=ERROR
+log4j.appender.ROLLING_FILE.Threshold=INFO
 log4j.appender.ROLLING_FILE.File=/WEB-INF/logs/logger.log
 log4j.appender.ROLLING_FILE.Append=true
 log4j.appender.ROLLING_FILE.MaxFileSize=10KB
